@@ -7,6 +7,7 @@ nobase_Stub_DATA = squid.conf.mas  \
         exceptionsitelist.mas  bannedsitelist.mas  greysitelist.mas \
         bannedurllist.mas exceptionurllist.mas greyurllist.mas \
 	bannedextensionlist.mas bannedmimetypelist.mas  \
+	bannedregexpurllist.mas \
 	bannedphraselist.mas exceptionphraselist.mas \
 	clamdscan.conf.mas \
 	pics.mas \
